2006-10-30 Sandro Santilli <strk@refractions.net>

	* capi/geostest.c: added some checks of return from CAPI 
	  functions returning GEOSGeom (not all, just a few:)

2006-10-27 Markus Schaber <schabi@logix-tt.com>

	* algorithm::InteriorPointLine (ctor): take Geometry by const-pointer.
	* geom::Geometry (getInteriorPoint): made a const-method
	* operation::polygonize::Polygonizer: implement filter_ro rather
	  then filter_rw, as it doesn't change the Geometry, propagated
	  change to internal interfaces (add methods)

2006-10-26 Sandro Santilli <strk@refractions.net>

	* capi/geos_c.h.in: reverted all changes of 'int' types
	  to 'size_t' types (the lib never changed, and still expects
	  ints)

2006-10-24 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/BinaryOp.h: try original geoms
	  first by default.
	* operation::overlay::OverlayResultValidator.cpp (isValid):
	  run the test even if inputs and output are not areal.
	* operation::overlay::FuzzyPointLocator:
	  eliminate non-polygonal components from consideration when
	  testing the location of points.
	* precision::GeometrySnapper: snapPrecisionFactor augmented
	  from 10e-12 to 10e-10.
	* precision::LineStringSnapper (findSegmentToSnap):
	  return the *closest* segment, don't snap if the closest
	  segment *intersects* the snap points, consider a distance
	  of exactly snapTolerance as non-tolerated
	  (got in sync with JTS)

2006-10-23 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/BinaryOp.h (SnapOp): document
	  and add optional CBR step (snap after applying common
	  bits removal - this is the default); (check_valid): add
	  validity checker function.

2006-10-20 Sandro Santilli <strk@refractions.net>

	* noding::SegmentString: added notifyCoordinatesChange
	  method.
	* noding::ScaledNoder: notify possible coordinates change
	  to SegmentString after removing repeated points.

2006-10-19 Sandro Santilli <strk@refractions.net>
