@@ -1,3 +1,12 @@
+2006-10-30 Markus Schaber <schabi@logix-tt.com>
+
+	* capi/: geos_c.cpp, geos_c.h.in: 
+	  Changed the C-API implementation to actually include the header
+	  that's included by the clients, this allows the compiler to check
+	  declarations and implementation for consistency, fixed geos_c.cpp
+	  accordingly (const-correctness, mainly).
+
+
 2006-10-30 Sandro Santilli <strk@refractions.net>
 
 	* capi/geostest.c: added some checks of return from CAPI 
